pro html/clase html.html/3-Diseño-Calendario.css
.caja-inscripciones{
    background: var(--blanco);
    border-radius: 15px;
    padding: 20px;
    width: 85%;
    display:block;
    margin: auto;
    margin-bottom: 20px;
    border: 1px solid #000000;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0, 02);
}
.caja-informacion{
    background: var(--blanco);
    border-radius: 15px;
    padding: 30px;
     width: 95%;
    display:contents;
    margin: auto;
    margin-bottom: 20px;
    border: 1px solid #000000;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0, 02);
    display: inline-block;
}
.subtitulos-seccion{
    font-size: 30px;
    color: #626262
}
.caja-mes {
    background: var(--blanco);
    border-radius: 15px;
    padding: 20px;
    margin: 20px auto;
    border: 1px solid #000000;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
    display: block;
    max-width: 500px;
    font-family: Arial, sans-serif;
}
.linea.divisora {
    margin: 20px 0;
    border: 0;
    border-top: 1px solid #eee;
}
table {
    width: 100%;
    border-collapse: collapse;
    margin-top: 15px;
}
th { 
    background-color: #333; color: white; padding: 10px;
}
td { 
    border: 1px solid #ddd; padding: 8px; text-align: left;
}        
/* Estilo para fines de semana */
.fin-de-semana {
    background-color: #fff0f0;
    color: #c00;
    font-weight: bold;
}
.numero {
    background-color: #fff0f0;
    color: rgb(38, 38, 38);
    font-weight: bold;
}
.fecha {
    background-color: #fff0f0;
    color: rgb(24, 24, 24);
    font-weight: bold;
}

